--- a/index.html
+++ b/index.html
@@ -4,6 +4,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:title" content="ModCoderPack Archive" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.modcoderpack.ml/" />
+    <meta
+      property="og:description"
+      content="Archive for MCP downloads."
+    />
+    <meta
+      property="description"
+      content="Archive for MCP downloads."
+    />
+    <meta name="theme-color" content="#2f3136" />
     <title>ModCoderPack Archive - Downloads</title>
     <link rel="stylesheet" href="/dist/css/main.css" />
   </head>
